# br2-external

./: .gitmodules  Config.in  LICENSE  README.md  external.desc  external.mk  local.mk
notebooks/: 01_cuda_deep_inspection.ipynb  02_gpu_performance_benchmark.ipynb  03_check_cuda.ipynb  04_train_magic_wand_model.ipynb
package/adb/: Config.in  adb.mk
package/adb/files/: S99adbd
package/farmhash/: Config.in  farmhash.hash  farmhash.mk
package/monit/files/: S99monit  adbd.conf  check-usb-state.sh  monitrc
package/tensorflow-lite/: Config.in  tensorflow-lite.mk
package/tflite-evaluator/: Config.in  tflite-evaluator.mk
package/tflite-evaluator/src/: CMakeLists.txt  main.cpp
patches/: fix-configuration-file-path.patch
